# FiniteDifferences

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BoundaryCondition.h  BoundaryConditionCall.cpp  BoundaryConditionNeumann.cpp  BoundaryConditionNeumann.h  BoundaryConditionPut.cpp  CMakeLists.txt  Calculator.h  CalculatorExplicit.h  CrankNicolson.cpp  CrankNicolson.h  ExplicitFiniteDifference.cpp  ExplicitFiniteDifference.h  FiniteDifferenceScheme.h  FiniteDifferences.cpp  FiniteDifferences.h  ImplicitFiniteDifference.cpp  ImplicitFiniteDifference.h  PayOffPut.cpp  README.md  StepCondition.h  StepConditionAmerican.cpp  StepConditionAmerican.h  StepConditionNull.cpp  StepConditionNull.h  TridiagonalOperator.cpp  main.cpp
cmake/: AddCXXCompilerFlag.cmake  fd.cmake  fd_test.cmake
fd/: CrankNicolson.cpp  CrankNicolson.h  ExplicitFiniteDifference.cpp  ExplicitFiniteDifference.h  FiniteDifference.cpp  FiniteDifference.h  ImplicitFiniteDifference.cpp  ImplicitFiniteDifference.h  StepConditionAmerican.cpp  StepConditionAmerican.h  TridiagonalOperator.cpp  TridiagonalOperator.h  main.cpp
script/: formatter.sh
script/ci/: before_install.sh  build_with_cmake.sh  install.sh  travis_cmake_setup.sh
